web/assets/scss/bootstrap-custom.scss
// Import animations
@import "animations";

// Open sans font
$FontPathOpenSans: "../fonts/open-sans/";
@import "../node_modules/npm-font-open-sans/open-sans.scss";
$font-open-sans: 'Open Sans', sans-serif;

// Font-awesome icons
$fa-font-path: "../fonts/font-awesome/";
@import "../node_modules/font-awesome/scss/font-awesome";

// Override bootstrap variables
// Color system
$gray-100: #f8f9fa;
$gray-200: #F3F3F3;
$gray-300: #dee2e6;
$gray-400: #ced4da;
$gray-500: #adb5bd;
$gray-600: #868e96;
$gray-700: #495057;
$gray-800: #343a40;
$gray-900: #212529;
$black:    #181715;

$blue:      #009BDD;
$indigo:    #82338E;
$purple:    #A36FAF;
$pink:      #e83e8c;
$red:       #D56056;
$red-dark:  #C00122;
$orange:    #fd7e14;
$yellow:    #FECE60;
$green:     #7DBA6D;
$green-dark:#22A136;
$teal:      #20c997;
$cyan:      #17a2b8;

$theme-colors: (
    primary: $blue,
    secondary: $gray-200,
    success: $green,
    info: $cyan,
    warning: $yellow,
    danger: $red,
    light: $gray-100,
    dark: $gray-800
);

// Text
$headings-font-weight:   700;
$paragraph-margin-bottom: 1.5rem;
$font-family-sans-serif: $font-open-sans;

// Round corners
$border-radius:          .15rem;
$border-radius-lg:       .15rem;
$border-radius-sm:       .15rem;

// Import full bootstrap from node_modules
@import "../node_modules/bootstrap/scss/bootstrap";


// set full height
html, body {
    @include media-breakpoint-up(md) {
        height: 100%;
    }
}
.container-fluid, .row {
    &.full-height {
        @include media-breakpoint-up(md) {
            height: 100%;
        }
    }
}

// Text size
h1{
    @include media-breakpoint-down(md){
        font-size: 1.5rem;
    }
}

// grey sidebar
.grey-bg {
    background-color: $gray-200;
    box-shadow: 0 4px 16px rgba(0,0,0,.16); 
}
.aside {
    height: 100%;
    z-index: 3;
    @include media-breakpoint-up(md){
        position: fixed;
        right: 0;
        top: 0;
    }
}

// Survey
.survey {
    @include media-breakpoint-up(md) {
        padding-bottom: 10rem;
    }
    .question {
        animation: blurfade .4s ease-out forwards;
        opacity: 0;
        filter: blur(2px);
        .reply {
            border-bottom: 1px solid $gray-400;
            margin-bottom: 1rem;
        }
    }
}

// Toggle icon on accordion
#accordion {
    div:first-child {
        border-bottom: 1px solid $gray-300;
        padding-bottom: 1rem;
        margin-bottom: 1rem;
    }
    a[data-toggle="collapse"] {
        text-decoration: none;
        display: inline-block;
        width: 100%;
        &:before {
            width: 10px;
            height: 10px;
            display: inline-block;
            font-family: FontAwesome;
        }
        &[aria-expanded="true"] {
            color: $black;
            &:before {
                content: "\f107";
            }
        }
        &[aria-expanded="false"] {
            &:before {
                content: "\f105"; 
            }
        }
    }
}

// Alerts
.alert-danger {
    position: fixed;
    top: 1%;
    z-index: 10000;
    width: calc(100% - 2rem);
    box-shadow: 0 4px 16px rgba(0,0,0,.16);
    @include media-breakpoint-up(md) {
        width: calc(66.66667% - 2rem);
    }
    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
    backface-visibility: hidden;
    perspective: 1000px;
    transform: none !important;
}

// Survey choice buttons
.btn-group {
    @include media-breakpoint-down(md) {
        display: inline;
    }
    &.choices {
        .btn {
            background-color: $gray-200;
            padding-top: 1rem;
            padding-bottom: 1rem;
            padding-left: 1rem;
            padding-right: 1rem;
            border: 1px solid $gray-300;
            &.active {
                color: $white;
                &.reply-index-0 {
                    background-color: $red-dark;
                }
                &.reply-index-1 {
                    background-color: $yellow;
                }
                &.reply-index-2 {
                    background-color: $green;
                }
                &.reply-index-3 {
                    background-color: $green-dark;
                }
                &.reply-index-4 {
                    background-color: $black;
                }
            }
            @include media-breakpoint-down(md) {
                width: 100%;
                border-radius: 0;
            }
        }
    }
    @include media-breakpoint-down(md) {
        > .btn:not(:last-child) {
            border-bottom: 0;
        }
    }
}

// Survey navigation buttons
.prev-next-btns {
    z-index: 10;
    background-color: $gray-200;
    position: fixed;
    bottom: 0;
    @include media-breakpoint-up(md) {
        width: 66.66667%;
        
    }
    [class^="col"]{
        padding-left: 0;
        padding-right: 0;
    }
    .btn {
        border-radius: 0;
        @include media-breakpoint-up(md) {
            padding-top: 3rem;
            padding-bottom: 3rem;
        }
        font-weight: 400;
        &.survey-prev {
            @include media-breakpoint-up(md) {
                padding-left: 3rem;
            }
            background-color: $gray-200;
            &:hover {
                background-color: darken($gray-200, 5%)
            }
            &:before {
                content: "\f104";
                width: 10px;
                height: 10px;
                display: inline-block;
                font-family: FontAwesome;
                margin-right: .5rem; 
            }
        }
        &.survey-next {
            @include media-breakpoint-up(md) {
                padding-right: 3rem;
            }
            &:after {
                content: "\f105";
                width: 10px;
                height: 10px;
                display: inline-block;
                font-family: FontAwesome;
                margin-left: .5rem;
            }
        }
    }
    @include media-breakpoint-down(md) {
        border-bottom: 1px solid $gray-300;
        width: 100%;
    }
}

// Chart legend
#chart-wrapper {
    .legend {
        &-color {
            display: inline-block;
            width: 15px;
            height: 3px;
            margin-right: 10px;
            vertical-align: middle;
            &-0 {
                background-color: $red-dark;
            }
            &-1 {
                background-color: $yellow;
            }
            &-2 {
                background-color: $green;
            }
            &-3 {
                background-color: $green-dark;
            }
            &-4 {
                background-color: $black;
            }
        }
    }
}
// Logo
.logo {
    @include media-breakpoint-up(md) {
        position: absolute;
        bottom: 0;
        left: 0;
    }
    border-top: 1px solid #e6e6e6;
    width: 100%;
    text-align: center;
    img {
        margin-top: 1.5rem;
        margin-bottom: 1.5rem;
    }
}


// Print 

@media print {
    .survey,
    .survey-info
    {
        break-after: always;
        page-break-after: always;
    }
    .grey-bg
    {
        break-before: always;
        page-break-before: always;
    }
    .collapse {
        display: block;
    }
}

